# GripperSocketControl

./: .gitignore  example.py  gripper_methods.py  gripper_methods_def.py  pyproject.toml  readme.md
example/: example.py  example_move_via_socket.py  example_robot_move.py
src/: gripper.py
src/GripperSocketControl/: gripper.py  gripper_methods_def.py
