[project]
name = "GripperSocketControl"
version = "0.5.1"
description = "Package for handling Robotiq gripper connected in Universal Robots UR3e."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Filip Adámek", email = "05adamfi09@gmail.com" },
  { name = "Patrik Michl", email = "michl.patrik98@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Repository = "https://github.com/05adamfi09/GripperSocketControl"
Issues = "https://github.com/05adamfi09/GripperSocketControl/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]